--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -51,7 +51,9 @@
             <span class="category"><%= blog.category %></span>
           </section>
         </div>
-      <% end %>      <!-- ここまで変更 -->
+      <% end %>
+      <!-- ここまで変更 -->
+      
     </div>
     <div class="pagination">
       <p><<</p>
